1 测试 2 添加Jitpack相关

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,2 @@
-include ':app', ':catmvvm-core', ':catmvvm-base'
+include ':app', ':catmvvm-core', ':catmvvm-support-rv'
 rootProject.name='CatMvvm'
